@@ -1317,7 +1317,6 @@
           --add-opens java.base/java.io=ALL-UNNAMED
           --add-opens java.base/java.lang=ALL-UNNAMED
           --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-          --add-opens java.base/java.lang.invoke=ALL-UNNAMED
           --add-opens java.base/java.net=ALL-UNNAMED
           --add-opens java.base/java.nio=ALL-UNNAMED
           --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
